@@ -2,6 +2,8 @@
   BF: Build: Correction of the release info process
   BF: Launcher: Correction of the behavior when the screen resolution changes
       Triggers the update of the user interface.
+  CR: Launcher: Scaling of icons depending on screen resolution
+      for aesthetic reasons
   
 1.0.1 20220401
   BF: Build: Correction of the version number
